--- a/tianji/tj-gateway/src/main/resources/bootstrap-dev.yml
+++ b/tianji/tj-gateway/src/main/resources/bootstrap-dev.yml
@@ -3,9 +3,12 @@ spring:
     nacos:
       server-addr: 192.168.150.101:8848 # nacos注册中心
       discovery:
+        enabled: false  # 🔴 本地开发禁用 Nacos 注册
         namespace: f923fb34-cb0a-4c06-8fca-ad61ea61a3f0
         group: DEFAULT_GROUP
         ip: 192.168.150.101
+      config:
+        enabled: false  # 🔴 本地开发禁用 Nacos 配置
 logging:
   level:
     com.tianji: debug
