--- a/tianji/tj-auth/tj-auth-common/pom.xml
+++ b/tianji/tj-auth/tj-auth-common/pom.xml
@@ -22,5 +22,9 @@
             <artifactId>tj-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
